fixing template scope lookup

--- a/templates/indexer-input-log4j.conf.erb
+++ b/templates/indexer-input-log4j.conf.erb
@@ -2,6 +2,6 @@ input {
   log4j {
     # ship logs to the 'rawlogs' fanout queue.
     type => "all"
-    port => <%= log4j_port %>
+    port => <%= scope.lookupvar('logstash::config::log4j_port') %>
   }
 }
